package chapter59.dependence;


import chapter73.dependence.Component;

/**
 * <p>描述类的信息</p>
 *
 * <pre>
 * @author wuxiongbo
 * @date 2022/1/11
 * </pre>
 */
public interface View extends Component {
}
