package chapter73.dependence;

import chapter59.dependence.View;

/**
 * <p>描述类的信息</p>
 *
 * <pre>
 * @author wuxiongbo
 * @date 2022/1/17
 * </pre>
 */
public class Text  implements View {
    public void hide() {
    }
}
