package design_patterns.chapter59.dependence;

/**
 * <p>描述类的信息</p>
 *
 * <pre>
 * @author wuxiongbo
 * @date 2022/1/11
 * </pre>
 */
public interface OnClickListener {
    void onClick(View v);
}
